--- a/app_main/templates/app_main/teachers.html
+++ b/app_main/templates/app_main/teachers.html
@@ -1,14 +1,13 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <div class="w-[1000px] flex flex-col items-center absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2">
         <a href="{% url 'teacher_create' %}" class="w-1/2  text-center px-4 py-2 border border-green-600 rounded hover:bg-green-600 hover:text-white">
             New teacher
         </a>
         <br>
         {% for teacher in teachers %}
             <div class="border border-black rounded p-4 w-1/2 flex flex-row justify-between items-center mb-2">
-                <a href="" class="hover:underline">{{ teacher }}</a>
+                <a href="{% url 'teacher_students' id=teacher.id %}" class="hover:underline">{{ teacher }}</a>
                 <div class="flex flex-col gap-2">
                     <a href="{% url 'teacher_update' id=teacher.id %}" class="border border-red-600 rounded py-1 px-2 text-yellow-600 hover:bg-yellow-600 hover:text-white transition duration-200">
                         Update
@@ -19,5 +18,4 @@
                 </div>
             </div>
         {% endfor %}
-    </div>
 {% endblock content %}
